--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="/index0.html">Tour</a></li>
+          <li><a class="nav-link scrollto" href="index0.html">Tour</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
