--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container">
               <h2 class="animated fadeInDown">Welcome to <span>Tourj Mahal</span></h2>
               <p class="animated fadeInUp">Mausoleum Taj Mahal (bahasa Urdu: تاج محل, Hindi: ताज महल) adalah sebuah mausoleum yang terletak di Agra, India. Dibangun atas keinginan Kaisar Mughal Shāh Jahān, anak Jahangir, sebagai sebuah mausoleum untuk istri Persianya, Arjumand Banu Begum, juga dikenal sebagai Mumtaz-ul-Zamani atau Mumtaz Mahal. </p>
-              <a href="/index0.html" class="btn-get-started animated fadeInUp scrollto">Mulai Tour</a>
+              <a href="index0.html" class="btn-get-started animated fadeInUp scrollto">Mulai Tour</a>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
             <div class="container">
               <h2 class="animated fadeInDown">Welcome to <span>Tourj Mahal</span></h2>
               <p class="animated fadeInUp">Mausoleum Taj Mahal (bahasa Urdu: تاج محل, Hindi: ताज महल) adalah sebuah mausoleum yang terletak di Agra, India. Dibangun atas keinginan Kaisar Mughal Shāh Jahān, anak Jahangir, sebagai sebuah mausoleum untuk istri Persianya, Arjumand Banu Begum, juga dikenal sebagai Mumtaz-ul-Zamani atau Mumtaz Mahal. </p>
-              <a href="/index0.html" class="btn-get-started animated fadeInUp scrollto">Mulai Tour</a>
+              <a href="index0.html" class="btn-get-started animated fadeInUp scrollto">Mulai Tour</a>
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="container">
               <h2 class="animated fadeInDown">Welcome to <span>Tourj Mahal</span></h2>
               <p class="animated fadeInUp">Mausoleum Taj Mahal (bahasa Urdu: تاج محل, Hindi: ताज महल) adalah sebuah mausoleum yang terletak di Agra, India. Dibangun atas keinginan Kaisar Mughal Shāh Jahān, anak Jahangir, sebagai sebuah mausoleum untuk istri Persianya, Arjumand Banu Begum, juga dikenal sebagai Mumtaz-ul-Zamani atau Mumtaz Mahal. </p>
-              <a href="/index0.html" class="btn-get-started animated fadeInUp scrollto">Mulai Tour</a>
+              <a href="index0.html" class="btn-get-started animated fadeInUp scrollto">Mulai Tour</a>
             </div>
           </div>
         </div>
